# web_scraper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  conf.py  pyproject.toml  repositories.csv
.github/workflows/: ci.yml  code_analysis.yml  release.yml  test.yml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/: index.rst.txt
docs/tutorials/: tutorial.md
tests/: test_scraper.py
web_scraper/: .__main__.py.un~  .scraper.py.un~  __main__.py  __main__.py~  scraper.py  scraper.py~
