[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "A Python scraper that extracts repository details from a GitHub user profile"
authors = ["Lahoussine Bouhmou <lahessine.bouhmou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
